Error fix for html button.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1 class="page-title">Taskinator</h1>
         <p>Click the button below to add a new task!</p>
-        <input type="button" value="Add Task" class="btn" />
+        <button class="btn" id="save-task">Add Task</button>
     </header>
     <main class="page-content">
         <section class="task-list-wrapper">
