--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
         </section>
         <section class="task-list-wrapper">
           <h2 class="list-title">Tasks In Progress</h2>
-          <ul class="task-list" id="task-in-progress">            
+          <ul class="task-list" id="tasks-in-progress">            
           </ul>
         </section>
         <section class="task-list-wrapper">
           <h2 class="list-title">Tasks Completed</h2>
-          <ul class="task-list" id="task-completed">            
+          <ul class="task-list" id="tasks-completed">            
           </ul>
         </section>
     </main>
